--- a/src/components/app-header/Header.css
+++ b/src/components/app-header/Header.css
@@ -4,16 +4,18 @@
     flex-direction: column;
     align-items: flex-start;
     padding: 30px;
-    border-bottom: 2px solid black;
     color: #fff;
     background-color: #3d5a80;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    border-radius: 4px;
 }
 
 .main-title {
-   
+    font-size: 25px;
 }
 
 .main-subtitle {
+    font-size: 18px;
     margin-top: 10px;
     font-weight: 500;
 }
