--- a/src/components/employee-search/EmployeeSearch.css
+++ b/src/components/employee-search/EmployeeSearch.css
@@ -2,7 +2,7 @@
     padding: 25px;
     background-color: #3d5a80;
     border-radius: 4px;
-    box-shadow: 15px 15px 30px rgba(0,0,0 .15);
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     color: #fff;
     margin-top: 25px;
     width: 700px;
@@ -12,4 +12,5 @@
     display: inline;
     width: 100%;
     padding: 4px;
+    font-size: 14px;
 }
